--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -332,6 +332,7 @@
     height: 38px;
   }
 }
+
 .brand-title {
   font-family: "Cairo", sans-serif;
   font-size: 1.5rem;
@@ -347,3 +348,46 @@
   letter-spacing: 0.5px;
   text-shadow: 0 2px 6px rgba(18, 177, 209, 0.3);
 }
+
+
+ @media (min-width: 1024px) and (max-width: 1199.98px) {
+  .brand-title {
+   font-family: "Cairo", sans-serif;
+   font-size: 1.5rem;
+   font-weight: 900;
+   background: linear-gradient(90deg, #0fa7c9, #12b1d1, #0fa7c9);
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent;
+   letter-spacing: 1px;
+   text-shadow: 0 2px 8px rgba(18, 177, 209, 0.25);
+   color: #12b1d1;
+   font-size: 1.3rem;
+   font-weight: 800;
+   letter-spacing: 0.5px;
+   text-shadow: 0 2px 6px rgba(18, 177, 209, 0.3);
+    }
+
+ .navbar-nav {
+    flex-wrap: nowrap;              
+    justify-content: space-between; 
+    width: 100%;
+    gap: 24px;
+  }
+  
+  .navbar-nav .nav-item {
+    flex: 0 0 auto;
+  }
+  
+  .navbar-nav .nav-link {
+    font-size: 14px;
+    font-weight: 600;
+    padding: 10px 6px;
+    white-space: nowrap;
+    color:#000;
+  }
+
+   .profile-wrapper {
+     position: relative;
+     margin-right: 35px;
+    }
+  }
